--- a/photos-api/package.json
+++ b/photos-api/package.json
@@ -7,7 +7,9 @@
   "name": "Express",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "dev": "nodemon index.js"
   },
